re PR tree-optimization/68766 (internal compiler error: in expand_LOOP_VECTORIZED, at internal-fn.c:1905)

gcc/

	PR tree-optimization/68766
	* tree-vectorizer.c (vectorize_loops): Check for
	if-converted loops when debug counters are used.

gcc/testsuite/

	PR tree-optimization/68766
	* gcc.dg/pr68766.c: New test.

From-SVN: r231395